applications/mastodon/resources/deployment-sidekiq.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mastodon-sidekiq
  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
        - image: ghcr.io/mastodon/mastodon:v4.7.3
          name: mastodon-sidekiq
          ports:
            - name: metrics
              containerPort: 9394
          command: ["bundle", "exec", "sidekiq"]
          resources:
            requests:
              cpu: 500m
              memory: 640Mi
            limits:
              memory: 1Gi
          readinessProbe:
            failureThreshold: 10
            exec:
              command:
                - cat
                - /opt/mastodon/tmp/sidekiq_process_has_started_and_will_begin_processing_jobs
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
