applications/mastodon/resources/deployment-streaming.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mastodon-streaming
  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      containers:
        - image: ghcr.io/mastodon/mastodon-streaming:v4.7.3
          name: mastodon-streaming
          ports:
            - name: streaming
              containerPort: 4000
          command: ["node", "./streaming"]
          livenessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
          readinessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
          startupProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
            initialDelaySeconds: 5
            failureThreshold: 15
            periodSeconds: 5
