applications/mastodon/resources/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mastodon-web
  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: ghcr.io/mastodon/mastodon:v4.7.3
          name: mastodon-web
          ports:
            - name: http
              containerPort: 3000
            - name: metrics
              containerPort: 9394
          command:
            [
              "bash",
              "-c",
              "rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -b [::] -p 3000",
            ]
          resources:
            requests:
              cpu: 1
              memory: 1280Mi
            limits:
              memory: 1536Mi
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            failureThreshold: 30
            periodSeconds: 5
