applications/mastodon/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - image: ghcr.io/mastodon/mastodon:v4.2.10
          name: mastodon-sidekiq
          command: ["bundle", "exec", "sidekiq"]
        - image: ghcr.io/mastodon/mastodon:v4.2.10
          name: mastodon-streaming
          ports:
            - containerPort: 4000
          command: ["node", "./streaming"]
        - image: ghcr.io/mastodon/mastodon:v4.2.10
          name: mastodon-web
          ports:
            - containerPort: 3000
          command:
            [
              "bash",
              "-c",
              "rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -p 3000",
            ]
