applications/mastodon/resources/service-redis.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis

spec:
  selector:
    app: redis
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
