applications/mastodon/resources/service-streaming.yaml
apiVersion: v1
kind: Service

metadata:
  name: mastodon-streaming

spec:
  selector:
    app: streaming
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 4000
      targetPort: 4000
