applications/mastodon/resources/service-web.yaml
apiVersion: v1
kind: Service

metadata:
  name: mastodon-web

spec:
  selector:
    app: web
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 3000
      targetPort: 3000
