applications/mastodon/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress

spec:
  ingressClassName: haproxy
  tls:
    - secretName: tls
      hosts:
        - ma.rokoucha.net
  rules:
    - host: ma.rokoucha.net
      http:
        paths:
          - path: /api/v1/streaming
            pathType: Prefix
            backend:
              service:
                name: mastodon-streaming
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mastodon-web
                port:
                  number: 3000
