applications/mastodon/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: haproxy-ingress
              app.kubernetes.io/name: kubernetes-ingress
      ports:
        - port: 3000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: streaming
spec:
  podSelector:
    matchLabels:
      app: streaming
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: haproxy-ingress
              app.kubernetes.io/name: kubernetes-ingress
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: monitoring.otelcol-gateway
              app.kubernetes.io/component: opentelemetry-collector
      ports:
        - port: 4000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - web
                  - sidekiq
                  - streaming
                  - maintenance
        - podSelector:
            matchLabels:
              batch.kubernetes.io/job-name: mastodon-migration
        - podSelector:
            matchLabels:
              batch.kubernetes.io/job-name: mastodon-deploy-search
      ports:
        - port: 5432
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: postgresql
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 5432
          protocol: TCP
        - port: 8000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: monitoring.otelcol-gateway
              app.kubernetes.io/component: opentelemetry-collector
      ports:
        - port: 9187
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - web
                  - sidekiq
                  - streaming
                  - maintenance
        - podSelector:
            matchLabels:
              batch.kubernetes.io/job-name: mastodon-deploy-search
        - podSelector:
            matchLabels:
              app: redis
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: redis-operator
          podSelector:
            matchLabels:
              name: redis-operator
      ports:
        - port: 6379
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: monitoring.otelcol-gateway
              app.kubernetes.io/component: opentelemetry-collector
      ports:
        - port: 9121
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elasticsearch
spec:
  podSelector:
    matchLabels:
      elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - web
                  - sidekiq
                  - maintenance
                  - elastic-exporter
        - podSelector:
            matchLabels:
              batch.kubernetes.io/job-name: mastodon-deploy-search
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: elastic-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: elastic-operator
              app.kubernetes.io/instance: elastic-operator
      ports:
        - port: 9200
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
      ports:
        - port: 9300
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elastic-exporter
spec:
  podSelector:
    matchLabels:
      app: elastic-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: monitoring.otelcol-gateway
              app.kubernetes.io/component: opentelemetry-collector
      ports:
        - port: 9114
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: application-egress
  namespace: mastodon
spec:
  endpointSelector:
    matchExpressions:
      - key: k8s:app
        operator: In
        values:
          - web
          - sidekiq
          - maintenance
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:cnpg.io/cluster: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:app: redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/component: opentelemetry-collector
            k8s:app.kubernetes.io/instance: monitoring.otelcol-gateway
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: haproxy-controller
            k8s:app.kubernetes.io/name: kubernetes-ingress
            k8s:app.kubernetes.io/instance: haproxy-ingress
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: smtp.mail.me.com
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: streaming-egress
  namespace: mastodon
spec:
  endpointSelector:
    matchLabels:
      k8s:app: streaming
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:cnpg.io/cluster: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:app: redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/component: opentelemetry-collector
            k8s:app.kubernetes.io/instance: monitoring.otelcol-gateway
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deployment-job-egress
  namespace: mastodon
spec:
  endpointSelector:
    matchExpressions:
      - key: k8s:batch.kubernetes.io/job-name
        operator: In
        values:
          - mastodon-migration
          - mastodon-deploy-search
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:cnpg.io/cluster: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:app: redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/component: opentelemetry-collector
            k8s:app.kubernetes.io/instance: monitoring.otelcol-gateway
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: haproxy-controller
            k8s:app.kubernetes.io/name: kubernetes-ingress
            k8s:app.kubernetes.io/instance: haproxy-ingress
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis-egress
  namespace: mastodon
spec:
  endpointSelector:
    matchLabels:
      k8s:app: redis
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:app: redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: elasticsearch-egress
  namespace: mastodon
spec:
  endpointSelector:
    matchLabels:
      k8s:elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
      toPorts:
        - ports:
            - port: "9300"
              protocol: TCP
    - toFQDNs:
        - matchName: geoip.elastic.co
        - matchName: paisano-production.d24a988e385e0074d717b6bdaea58f0d.r2.cloudflarestorage.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: elastic-exporter-egress
  namespace: mastodon
spec:
  endpointSelector:
    matchLabels:
      k8s:app: elastic-exporter
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgresql-egress
  namespace: mastodon
spec:
  endpointSelector:
    matchLabels:
      k8s:cnpg.io/cluster: postgresql
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mastodon
            k8s:cnpg.io/cluster: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
